--- a/Cliente/makefile
+++ b/Cliente/makefile
@@ -4,7 +4,7 @@ all: execute
 	@echo "Sucesso!"
 
 compile:
-	@gcc $(EXEC).c -o $(EXEC) -lm -lpthread
+	@gcc $(EXEC).c -o $(EXEC) -lm -lpthread -w
 
 execute: compile
 	@./cliente
